--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/__pycache__/*
-/dialogs/__pycache__/*
-/models/__pycache__/*
-/utils/__pycache__/*
-/views/__pycache__/*
+__pycache__/
+dialogs/__pycache__/
+models/__pycache__/
+utils/__pycache__/
+views/__pycache__/
